Tue Jul 16 17:21:39 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (assign_heap_slot): refactoring variable names.

	* gc.c (slot_add_freeobj): added.

	* gc.c (heaps_add_freeslot): added.

	* gc.c (finalize_list, rb_gc_force_recycle, slot_sweep): use
	  `slot_add_freeobj' instead of modifying linked list directly.

Tue Jul 16 16:30:58 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (lazy_sweep): refactoring.

Tue Jul 16 13:32:06 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* encoding.c (enc_set_index): since r41967, old terminator is dealt
	  with in str_fill_term().  should not consider it here because this
	  function is called before any encoding is set.

Tue Jul 16 11:12:03 2013  Masaki Matsushita  <glass.saga@gmail.com>

	* proc.c (rb_block_arity): raise ArgumentError if no block given.

Tue Jul 16 08:15:22 2013  Zachary Scott  <e@zzak.io>

	* ext/bigdecimal/lib/bigdecimal/util.rb: [DOC] document top-level
	  classes from BigDecimal utils native extensions

Tue Jul 16 03:23:03 2013  Zachary Scott  <e@zzak.io>

	* numeric.c: [DOC] improve rdoc formatting for parameters and links

Mon Jul 15 14:40:00 2013  Tanaka Akira  <akr@fsij.org>

	* include/ruby/intern.h (rb_big2str0): Deprecated.

	* bignum.c (rb_big2str1): Renamed from rb_big2str0.
	  (rb_big2str0): Deprecated wrapper for rb_big2str1.
	  (rb_big2str): Invoke rb_big2str1 instead of rb_big2str0.

Mon Jul 15 14:13:02 2013  Masaki Matsushita  <glass.saga@gmail.com>

	* struct.c (rb_struct_each_pair): use rb_yield_values(2, key, value)
	  instead of rb_yield(rb_assoc_new(key, value)) if rb_block_arity()
	  is greater than 1.

Mon Jul 15 13:46:26 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c: Add static assertions.

Mon Jul 15 13:36:02 2013  Masaki Matsushita  <glass.saga@gmail.com>

	* hash.c (rb_hash_each_pair): performance improvement by using
	  rb_block_arity().

Mon Jul 15 13:15:37 2013  Masaki Matsushita  <glass.saga@gmail.com>

	* proc.c (rb_block_arity): create internal API rb_block_arity().